--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,9 @@ android {
     }
     buildFeatures {
         dataBinding true
+        viewBinding true
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
